<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/off_white"
    android:paddingHorizontal="@dimen/_21sdp"
    android:paddingTop="@dimen/_17sdp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_19sdp"
        android:background="@drawable/bg_white_rounded"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivRemoveHistory"
            android:layout_width="@dimen/_52sdp"
            android:layout_height="@dimen/_36sdp"
            android:paddingRight="@dimen/_19sdp"
            android:paddingLeft="@dimen/_19sdp"
            android:paddingTop="@dimen/_20sdp"
            android:contentDescription="@string/cd_delete_button_to_remove_a_history"
            android:src="@drawable/ic_bin"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/tvOriginLink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/poppins"
            android:maxLines="1"
            android:text="@string/dummy_origin_link"
            android:textColor="@color/grayish_violet"
            android:textSize="@dimen/_14sdp"
            android:layout_marginStart="@dimen/_19sdp"
            android:layout_marginTop="@dimen/_19sdp"
            app:layout_constraintEnd_toStartOf="@+id/ivRemoveHistory"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/viewDivider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/gray"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintTop_toBottomOf="@+id/tvOriginLink" />

        <TextView
            android:id="@+id/tvShortenLink"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="@font/poppins"
            android:maxLines="1"
            android:text="@string/dummy_shorten_url"
            android:textColor="@color/cyan"
            android:textSize="@dimen/_14sdp"
            android:layout_marginStart="@dimen/_19sdp"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewDivider" />

        <TextView
            android:id="@+id/tvCopyBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_bg_copy"
            android:gravity="center"
            android:text="@string/btn_text_copy"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/poppins"
            android:textStyle="bold"
            android:layout_margin="@dimen/_19sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvShortenLink" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>