<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.ShortlyActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clGetStarted"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/clMainActionContainer">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/labelGuideLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.12" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/graphicGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.72" />

            <TextView
                android:id="@+id/tvLabelShortly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_shortly"
                android:fontFamily="@font/poppins"
                android:textStyle="bold"
                android:textSize="@dimen/_20sdp"
                android:textColor="@color/grayish_violet"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/labelGuideLine"/>

            <ImageView
                android:id="@+id/ivSplash"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:contentDescription="@string/cd_graphic_for_getting_start"
                android:scaleType="fitCenter"
                android:src="@drawable/bg_splash_drawing"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/labelGuideLine"
                app:layout_constraintBottom_toTopOf="@+id/graphicGuideline"/>

            <TextView
                android:id="@+id/tvLabelGetStarted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textStyle="bold"
                android:text="@string/let_s_get_started"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:textSize="@dimen/_16sdp"
                android:textColor="@color/grayish_violet"
                app:layout_constraintTop_toBottomOf="@+id/graphicGuideline"/>

            <TextView
                android:layout_width="@dimen/_190sdp"
                android:layout_height="wrap_content"
                android:text="@string/disclaimer_get_started"
                android:textColor="@color/grayish_violet"
                android:fontFamily="@font/poppins"
                android:textSize="@dimen/_14sdp"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@+id/tvLabelGetStarted"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/linkHistoryFragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:name="test.geo.shortly.ui.LinkHistoryFragment"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/clMainActionContainer"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55sdp"
            android:background="@drawable/bg_main_shadow"
            app:layout_constraintBottom_toTopOf="@+id/clMainActionContainer" />

        <!--match parent is equivalent to 316sdp of horizontal unit, for 375 horizontal unit
         height of the bottom rectangle is 204, therefore, 172sdp is calculated considering the
         values mentioned above-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clMainActionContainer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_140sdp"
            android:background="@drawable/bg_main_bottom_rectangle"
            android:paddingHorizontal="@dimen/_40sdp"
            android:paddingTop="@dimen/_38sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/et_url_to_short"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_url_edit"
                        android:fontFamily="@font/poppins"
                        android:gravity="center"
                        android:hint="@string/hint_shorten_a_link_here"
                        android:inputType="textUri"
                        android:imeOptions="actionDone"
                        android:textStyle="normal"
                        android:textColor="@color/black"
                        android:textColorHint="@color/gray"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvShortenLink"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_9sdp"
                        android:background="@drawable/bg_btn_url_short"
                        android:fontFamily="@font/poppins"
                        android:gravity="center"
                        android:text="@string/btn_shorten_it"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/et_url_to_short" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </ScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>